build: upgrade compose to 1.7.0-alpha04

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,15 +9,15 @@ androidxNavigation = "2.7.7"
 androidxHilt = "1.2.0"
 androidxStartup = "1.1.1"
 androidxMedia3 = "1.2.1"
-androidxBrowser = "1.7.0"
+androidxBrowser = "1.8.0"
 androidxWindow = "1.2.0"
 androidDesugar = "2.0.4"
 
-compose = "1.7.0-alpha02"
+compose = "1.7.0-alpha04"
 composeCompiler = "1.5.8"
 composeShadowsPlus = "1.0.4"
 constraintlayoutCompose = "1.0.1"
-material3 = "1.2.0"
+material3 = "1.3.0-alpha02"
 okhttp3 = "4.12.0"
 retrofit2 = "2.9.0"
 room = "2.6.1"
@@ -40,7 +40,7 @@ mmkv = "1.3.2"
 mmkvKtx = "0.1.3"
 mockk = "1.13.8"
 mockitoKotlin = "5.1.0"
-lottie = "6.0.0"
+lottie = "6.4.0"
 work = "2.9.0"
 leakcanary = "2.12"
 composeDestinations = "1.10.0"
