ci: setup benchmark tests

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -44,11 +44,11 @@ jobs:
           cache: "gradle"
 
       # Required for Setting Up Benchmarks
-      # - name: Enable KVM
-      #   run: |
-      #     echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
-      #     sudo udevadm control --reload-rules
-      #     sudo udevadm trigger --name-match=kvm
+      - name: Enable KVM
+        run: |
+          echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
+          sudo udevadm control --reload-rules
+          sudo udevadm trigger --name-match=kvm
 
       - name: Change wrapper permissions
         run: chmod +x ./gradlew
@@ -65,14 +65,21 @@ jobs:
         run: ./gradlew app:testDebugUnitTest
 
       # Setup benchmarks
-      # https://github.com/ReactiveCircus/android-emulator-runner/issues/161#issuecomment-1248757074
-      # - name: Run benchmarks
-      #   env:
-      #     MASTODON_USERNAME: ${{ secrets.MASTODON_USERNAME }}
-      #     MASTODON_PASSWORD: ${{ secrets.MASTODON_PASSWORD }}
-      #     MASTODON_SITE: ${{ secrets.MASTODON_SITE }}
-      #   uses: reactivecircus/android-emulator-runner@v2
-      #   with:
-      #     api-level: 34
-      #     # restart adb to fix broken emulator
-      #     script: adb kill-server && adb start-server && ./gradlew app:benchmark:connectedBenchmarkAndroidTest
+      - name: Run benchmarks
+        env:
+          MASTODON_USERNAME: ${{ secrets.MASTODON_USERNAME }}
+          MASTODON_PASSWORD: ${{ secrets.MASTODON_PASSWORD }}
+          MASTODON_SITE: ${{ secrets.MASTODON_SITE }}
+        uses: reactivecircus/android-emulator-runner@v2
+        with:
+          api-level: 34
+          arch: x86_64
+          target: google_apis
+          script: ./gradlew app:benchmark:connectedBenchmarkAndroidTest
+
+      - name: Upload benchmark results if failed
+        uses: actions/upload-artifact@v4
+        if: failure()
+        with:
+          name: Benchmark Results
+          path: app/benchmark/build/reports/androidTests/connected/benchmark
