--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -8,7 +8,8 @@ on:
   push:
     branches:
       - main
-  pull_request:
+  # compared with pull_request, pull_request_target has access to secrets
+  pull_request_target:
     branches:
       - main
 
