--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 
-androidxCore = "1.13.0"
+androidxCore = "1.13.1"
 androidxLifecycle = "2.7.0"
 androidxActivity = "1.9.0"
 androidxTestExt = "1.1.5"
@@ -13,28 +13,28 @@ androidxBrowser = "1.8.0"
 androidxWindow = "1.2.0"
 androidDesugar = "2.0.4"
 
-compose = "1.7.0-alpha07"
-composeCompiler = "1.5.8"
+compose = "1.7.0-alpha08"
+composeCompiler = "1.5.13"
 composeShadowsPlus = "1.0.4"
 constraintlayoutCompose = "1.0.1"
-material3 = "1.3.0-alpha05"
+material3 = "1.3.0-alpha06"
 okhttp3 = "4.12.0"
-retrofit2 = "2.9.0"
+retrofit2 = "2.11.0"
 room = "2.6.1"
 kotlinxSerializationConverter = "1.0.0"
-loggingInterceptor = "4.11.0"
+loggingInterceptor = "4.12.0"
 networkresultCalladapter = "1.0.0"
 
 kotlinxDatetime = "0.5.0"
 kotlinxSerializationJson = "1.6.3"
 kotlinxCollections = "0.3.7"
-kotlinxCoroutines = "1.7.3"
-kotlin = "1.9.22"
-ksp = "1.9.22-1.0.17"
+kotlinxCoroutines = "1.8.0"
+kotlin = "1.9.23"
+ksp = "1.9.23-1.0.20"
 ktsoup = "0.3.0"
 
 agp = "8.3.0"
-coil = "2.4.0"
+coil = "2.5.0"
 media = "0.4.0"
 mmkv = "1.3.2"
 mmkvKtx = "0.1.3"
@@ -42,18 +42,18 @@ mockk = "1.13.8"
 mockitoKotlin = "5.1.0"
 lottie = "6.4.0"
 work = "2.9.0"
-leakcanary = "2.12"
-composeDestinations = "1.10.0"
+leakcanary = "2.14"
+composeDestinations = "2.1.0-beta03"
 hilt = "2.50"
 haze = "0.5.2"
-firebase = "32.8.0"
+firebase = "32.8.1"
 googleServices = "4.4.1"
 firebaseCrashlyticsPlugin = "2.9.9"
 paging3 = "3.2.1"
 splashScreen = "1.0.1"
 junit = "4.13.2"
-robolectric = "4.11.1"
-jsoup = "1.16.1"
+robolectric = "4.12.1"
+jsoup = "1.17.2"
 zoomimage = "1.0.0-beta10"
 uiautomator = "2.3.0"
 benchmark-macro-junit4 = "1.2.4"
@@ -90,7 +90,6 @@ androidx-compose-runtime = { group = "androidx.compose.runtime", name = "runtime
 androidx-compose-material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "compose" }
 
 splash = { module = "androidx.core:core-splashscreen", version.ref = "splashScreen" }
-androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "androidxNavigation" }
 
 okhttp3 = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp3" }
 okhttp3-mockwebserver = { module = "com.squareup.okhttp3:mockwebserver", version.ref = "okhttp3" }
@@ -139,8 +138,8 @@ compose-media = { module = "com.github.fengdai.compose:media", version.ref = "me
 zoomable = { module = "io.github.panpf.zoomimage:zoomimage-compose-coil", version.ref = "zoomimage" }
 lottie = { module = "com.airbnb.android:lottie-compose", version.ref = "lottie" }
 leakcanary = { module = "com.squareup.leakcanary:leakcanary-android", version.ref = "leakcanary" }
-compose-destinations-animations-core = { module = "io.github.raamcosta.compose-destinations:animations-core", version.ref = "composeDestinations" }
 compose-destinations-ksp = { module = "io.github.raamcosta.compose-destinations:ksp", version.ref = "composeDestinations" }
+compose-destinations-core = { module = "io.github.raamcosta.compose-destinations:core", version.ref = "composeDestinations" }
 compose-shadow-plus = { module = "com.github.GIGAMOLE:ComposeShadowsPlus", version.ref = "composeShadowsPlus" }
 
 org-jetbrains-kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerializationJson" }
