--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,8 +13,8 @@ androidxBrowser = "1.8.0"
 androidxWindow = "1.2.0"
 androidDesugar = "2.0.4"
 
-compose = "1.7.0-alpha07"
-composeCompiler = "1.5.8"
+compose = "1.7.0-beta01"
+composeCompiler = "1.5.14"
 composeShadowsPlus = "1.0.4"
 constraintlayoutCompose = "1.0.1"
 material3 = "1.3.0-alpha05"
@@ -29,8 +29,8 @@ kotlinxDatetime = "0.5.0"
 kotlinxSerializationJson = "1.6.3"
 kotlinxCollections = "0.3.7"
 kotlinxCoroutines = "1.7.3"
-kotlin = "1.9.22"
-ksp = "1.9.22-1.0.17"
+kotlin = "1.9.24"
+ksp = "1.9.24-1.0.20"
 ktsoup = "0.3.0"
 
 agp = "8.3.0"
@@ -43,7 +43,7 @@ mockitoKotlin = "5.1.0"
 lottie = "6.4.0"
 work = "2.9.0"
 leakcanary = "2.12"
-composeDestinations = "1.10.0"
+composeDestinations = "1.11.4-alpha"
 hilt = "2.50"
 haze = "0.5.2"
 firebase = "32.8.0"
@@ -136,7 +136,7 @@ mockk-agent = { module = "io.mockk:mockk-agent", version.ref = "mockk" }
 jsoup = { module = "org.jsoup:jsoup", version.ref = "jsoup" }
 haze = { module = "dev.chrisbanes.haze:haze", version.ref = "haze" }
 compose-media = { module = "com.github.fengdai.compose:media", version.ref = "media" }
-zoomable = { module = "io.github.panpf.zoomimage:zoomimage-compose-coil", version.ref = "zoomimage" }
+#zoomable = { module = "io.github.panpf.zoomimage:zoomimage-compose-coil", version.ref = "zoomimage" }
 lottie = { module = "com.airbnb.android:lottie-compose", version.ref = "lottie" }
 leakcanary = { module = "com.squareup.leakcanary:leakcanary-android", version.ref = "leakcanary" }
 compose-destinations-animations-core = { module = "io.github.raamcosta.compose-destinations:animations-core", version.ref = "composeDestinations" }
@@ -164,6 +164,8 @@ androidx-monitor = { group = "androidx.test", name = "monitor", version.ref = "m
 androidx-junit-ktx = { group = "androidx.test.ext", name = "junit-ktx", version.ref = "junitKtx" }
 firebase-bom = { group = "com.google.firebase", name = "firebase-bom", version.ref = "firebase" }
 firebase-crashlytics = { module = "com.google.firebase:firebase-crashlytics" }
+
+zoomable = "net.engawapg.lib:zoomable:1.6.1"
 
 [plugins]
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
