--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -41,7 +41,10 @@ jobs:
         with:
           distribution: "temurin"
           java-version: "17"
-          cache: "gradle"
+
+      - uses: gradle/actions/setup-gradle@v3
+        with:
+          gradle-home-cache-cleanup: true
 
       # Required for Setting Up Benchmarks
       # - name: Enable KVM
@@ -49,9 +52,6 @@ jobs:
       #     echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
       #     sudo udevadm control --reload-rules
       #     sudo udevadm trigger --name-match=kvm
-
-      - name: Change wrapper permissions
-        run: chmod +x ./gradlew
 
       - name: Add google-services.json
         run: mv app/google-services-sample.json app/google-services.json
