--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,67 +1,63 @@
 [versions]
 
 androidxCore = "1.13.1"
-androidxLifecycle = "2.8.1"
-androidxActivity = "1.9.0"
-androidxTestExt = "1.1.5"
-androidxTestEspresso = "3.5.1"
-androidxNavigation = "2.8.0-beta02"
+androidxLifecycle = "2.8.6"
+androidxActivity = "1.9.2"
+androidxTestExt = "1.2.1"
+androidxTestEspresso = "3.6.1"
+androidxNavigation = "2.8.1"
 androidxHilt = "1.2.0"
-androidxStartup = "1.1.1"
-androidxMedia3 = "1.3.1"
+androidxStartup = "1.2.0"
+androidxMedia3 = "1.4.1"
 androidxBrowser = "1.8.0"
 androidxWindow = "1.3.0"
-androidDesugar = "2.0.4"
+androidDesugar = "2.1.2"
 
 compose = "1.7.0-beta01"
 composeCompiler = "1.5.14"
 composeShadowsPlus = "1.0.4"
 constraintlayoutCompose = "1.0.1"
-material3 = "1.3.0-beta02"
+material3 = "1.3.0"
 okhttp3 = "4.12.0"
-ktor = "2.3.11"
+ktor = "2.3.12"
 retrofit2 = "2.11.0"
 room = "2.6.1"
 kotlinxSerializationConverter = "1.0.0"
 loggingInterceptor = "4.12.0"
 networkresultCalladapter = "1.0.0"
 
-kotlinxDatetime = "0.5.0"
-kotlinxSerializationJson = "1.6.3"
-kotlinxCollections = "0.3.7"
-kotlinxCoroutines = "1.8.1"
-kotlin = "2.0.0"
-ksp = "2.0.0-1.0.21"
+kotlinxDatetime = "0.6.0"
+kotlinxSerializationJson = "1.7.3"
+kotlinxCollections = "0.3.8"
+kotlinxCoroutines = "1.9.0"
+kotlin = "2.0.20"
+ksp = "2.0.20-1.0.25"
 ktsoup = "0.3.0"
 
-agp = "8.4.1"
-coil = "2.6.0"
+agp = "8.5.2"
+coil = "2.7.0"
 media = "0.4.0"
-mmkv = "1.3.5"
-mmkvKtx = "0.1.5"
-mockk = "1.13.11"
+mmkv = "1.3.9"
+mmkvKtx = "0.1.7"
+mockk = "1.13.12"
 mockitoKotlin = "5.1.0"
-lottie = "6.4.0"
-work = "2.9.0"
+lottie = "6.5.2"
+work = "2.9.1"
 leakcanary = "2.14"
 composeDestinations = "1.11.4-alpha"
-hilt = "2.51.1"
+hilt = "2.52"
 haze = "0.7.1"
-firebase = "33.1.0"
-googleServices = "4.4.2"
-firebaseCrashlyticsPlugin = "3.0.1"
-paging3 = "3.3.0"
+paging3 = "3.3.2"
 splashScreen = "1.0.1"
 junit = "4.13.2"
-robolectric = "4.12.2"
+robolectric = "4.13"
 jsoup = "1.17.2"
-zoomimage = "1.0.0-beta10"
 uiautomator = "2.3.0"
-benchmark-macro-junit4 = "1.2.4"
+benchmark-macro-junit4 = "1.3.1"
 scrollbar = "2.0.7"
-profileinstaller = "1.3.1"
-monitor = "1.6.1"
-junitKtx = "1.1.5"
+profileinstaller = "1.4.0"
+monitor = "1.7.2"
+junitKtx = "1.2.1"
 logcat = "0.1"
 
 [libraries]
@@ -72,7 +68,7 @@ androidx-media3 = { module = "androidx.media3:media3-exoplayer", version.ref = "
 androidx-media3-ui = { group = "androidx.media3", name = "media3-ui", version.ref = "androidxMedia3" }
 
 # compose
-androidx-compose-bom = "dev.chrisbanes.compose:compose-bom:2024.05.00-alpha03"
+androidx-compose-bom = "androidx.compose:compose-bom:2024.09.02"
 androidx-compose-ui = { module = "androidx.compose.ui:ui" }
 androidx-compose-ui-util = { module = "androidx.compose.ui:ui-util" }
 androidx-compose-material = { module = "androidx.compose.material:material" }
@@ -84,9 +80,9 @@ androidx-compose-runtime = { group = "androidx.compose.runtime", name = "runtime
 androidx-compose-material-icons-extended = { module = "androidx.compose.material:material-icons-extended" }
 androidx-compose-material3 = { module = "androidx.compose.material3:material3", version.ref = "material3" }
 
-androidx-test-core = "androidx.test:core-ktx:1.6.0-rc01"
-androidx-test-rules = "androidx.test:rules:1.6.0-rc01"
-androidx-test-runner = "androidx.test:runner:1.6.0-rc01"
+androidx-test-core = "androidx.test:core-ktx:1.6.1"
+androidx-test-rules = "androidx.test:rules:1.6.1"
+androidx-test-runner = "androidx.test:runner:1.6.2"
 androidx-test-ext-junit = { module = "androidx.test.ext:junit", version.ref = "androidxTestExt" }
 junit = { module = "junit:junit", version.ref = "junit" }
 androidx-test-espresso-core = { module = "androidx.test.espresso:espresso-core", version.ref = "androidxTestEspresso" }
@@ -183,17 +179,11 @@ benchmark-macro-junit4 = { group = "androidx.benchmark", name = "benchmark-macro
 profileinstaller = { module = "androidx.profileinstaller:profileinstaller", version.ref = "profileinstaller" }
 androidx-monitor = { group = "androidx.test", name = "monitor", version.ref = "monitor" }
 androidx-junit-ktx = { group = "androidx.test.ext", name = "junit-ktx", version.ref = "junitKtx" }
-firebase-bom = { group = "com.google.firebase", name = "firebase-bom", version.ref = "firebase" }
-firebase-crashlytics = { module = "com.google.firebase:firebase-crashlytics" }
 google-ksp-gradle-plugin = { module = "com.google.devtools.ksp:symbol-processing-gradle-plugin", version.ref = "ksp" }
-
-zoomable = "net.engawapg.lib:zoomable:1.6.1"
 
 [plugins]
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
-firebase-crashlytics = { id = "com.google.firebase.crashlytics", version.ref = "firebaseCrashlyticsPlugin" }
-google-services = { id = "com.google.gms.google-services", version.ref = "googleServices" }
 compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 
 [bundles]
